Feat: 모든 html에 해당 partial 추가

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -5,6 +5,7 @@
 {{> partials/nav}}
 {{> partials/subnav}}
 <div class="container" id="main">
+    {{> partials/alerts}}
     <div class="col-md-12 col-sm-12 col-lg-12">
         <div class="panel panel-default">
           <header class="qna-header">
