--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -6,6 +6,7 @@
 {{> partials/subnav}}
 
 <div class="container" id="main">
+    {{> partials/alerts}}
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default content-main">
           <form name="question" method="post" action="/qna/create">
