--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -6,6 +6,7 @@
 {{> partials/subnav}}
 
 <div class="container" id="main">
+    {{> partials/alerts}}
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
           <form name="question" method="post" action="/user/login">
