--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -6,6 +6,7 @@
 {{> partials/subnav}}
 
 <div class="container" id="main">
+    {{> partials/alerts}}
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default">
             <div class="panel-heading"><h4>Profiles</h4></div>
