--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <!-- 공통 헤더 사용 -->
-<head th:replace="~{fragments :: head('회원가입')}"></head>
+<head th:replace="~{fragments :: head('회원정보 수정')}"></head>
 
 <body>
 <!-- 공통 상단 내비게이션 바 사용 -->
@@ -14,10 +14,14 @@
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
-            <form name="question" method="post" action="/users/signUp" th:action="@{/users/signUp}">
+            <form name="question" method="post" th:action="@{/users/{seq}(seq=${user.seq})}">
+                <!-- PUT 메소드 지정을 위한 hidden input -->
+                <input type="hidden" name="_method" value="PUT" />
+
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
-                    <input class="form-control" id="userId" name="userId" placeholder="User ID">
+                    <input class="form-control" id="userId" name="userId" th:value="${user.userId}" readonly>
+                    <small class="text-muted">사용자 아이디는 수정할 수 없습니다.</small>
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
@@ -25,13 +29,13 @@
                 </div>
                 <div class="form-group">
                     <label for="name">이름</label>
-                    <input class="form-control" id="name" name="name" placeholder="Name">
+                    <input class="form-control" id="name" name="name" placeholder="Name" th:value="${user.name}">
                 </div>
                 <div class="form-group">
                     <label for="email">이메일</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email" th:value="${user.email}">
                 </div>
-                <button type="submit" class="btn btn-success clearfix pull-right">회원가입</button>
+                <button type="submit" class="btn btn-success clearfix pull-right">정보수정</button>
                 <div class="clearfix" />
             </form>
         </div>
