--- a/src/main/resources/templates/partials/alerts.html
+++ b/src/main/resources/templates/partials/alerts.html
@@ -1,5 +1,5 @@
-{{#errorMessage}}
+{{#alertMessage}}
     <div class="alert alert-danger" role="alert">
-        {{errorMessage}}
+        {{alertMessage}}
     </div>
-{{/errorMessage}}
+{{/alertMessage}}
