--- a/src/main/resources/templates/user/update-form.html
+++ b/src/main/resources/templates/user/update-form.html
@@ -30,7 +30,7 @@
                   <label for="email">이메일</label>
                   <input type="email" class="form-control" id="email" name="email" placeholder="{{user.email}}">
               </div>
-              <button type="submit" class="btn btn-success clearfix pull-right">회원가입</button>
+              <button type="submit" class="btn btn-success clearfix pull-right">회원 정보 수정</button>
               <div class="clearfix" />
           </form>
         </div>
