refactor: 기존 디자인 유지하도록 코드 수정 * 댓글 작성 아직 구현 안함

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,9 @@
         <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
             <div class="panel panel-default qna-list">
                 <ul class="list">
+
+
+                    <!-- ✅ 2. 사용자가 작성한 게시글 (Thymeleaf 동적 데이터) -->
                     <li th:each="board : ${boards}">
                         <div class="wrap">
                             <div class="main">
