--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -17,147 +17,62 @@
     <div class="container" id="main">
         <div class="col-md-12 col-sm-12 col-lg-12">
             <div class="panel panel-default">
-              <header class="qna-header">
-                  <h2 class="qna-title">InitializingBean implements afterPropertiesSet() 호출되지 않는 문제.</h2>
-              </header>
-              <div class="content-main">
-                  <article class="article">
-                      <div class="article-header">
-                          <div class="article-header-thumb">
-                              <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
-                          </div>
-                          <div class="article-header-text">
-                              <a href="/users/92/kimmunsu" class="article-author-name">kimmunsu</a>
-                              <a href="/questions/413" class="article-header-time" title="퍼머링크">
-                                  2015-12-30 01:47
-                                  <i class="icon-link"></i>
-                              </a>
-                          </div>
-                      </div>
-                      <div class="article-doc">
-                          <p>A 에 의존성을 가지는 B라는 클래스가 있습니다.</p><p>B라는 클래스는 InitializingBean 을 상속하고 afterPropertiesSet을 구현하고 있습니다.
-                          서버가 가동되면서 bean들이 초기화되는 시점에 B라는 클래스의 afterPropertiesSet 메소드는</p><p>A라는 클래스의 특정 메소드인 afunc()를 호출하고 있습니다.</p>
-                      </div>
-                      <div class="article-util">
-                          <ul class="article-util-list">
-                              <li>
-                                  <a class="link-modify-article" href="/questions/423/form">수정</a>
-                              </li>
-                              <li>
-                                  <form class="form-delete" action="/questions/423" method="POST">
-                                      <input type="hidden" name="_method" value="DELETE">
-                                      <button class="link-delete-article" type="submit">삭제</button>
-                                  </form>
-                              </li>
-                              <li>
-                                  <a class="link-modify-article" href="/templates/index.html">목록</a>
-                              </li>
-                          </ul>
-                      </div>
-                  </article>
+                <header class="qna-header">
+                    <h2 class="qna-title" th:text="${board.title}">게시글 제목</h2>
+                </header>
+                <div class="content-main">
+                    <article class="article">
+                        <div class="article-header">
+                            <div class="article-header-thumb">
+                                <img src="https://graph.facebook.com/v2.3/100000059371774/picture"
+                                     class="article-author-thumb" alt="">
+                            </div>
+                            <div class="article-header-text">
+                                <span class="article-author-name" th:text="${board.writer}">작성자</span>
+                                <span class="article-header-time">방금 전</span>
+                            </div>
+                        </div>
+                        <div class="article-doc">
+                            <p th:text="${board.content}">게시글 내용</p>
+                        </div>
+                        <div class="article-util">
+                            <ul class="article-util-list">
+                                <li>
+                                    <a class="link-modify-article" href="#">수정</a>
+                                </li>
+                                <li>
+                                    <form class="form-delete" action="#" method="POST">
+                                        <input type="hidden" name="_method" value="DELETE">
+                                        <button class="link-delete-article" type="submit">삭제</button>
+                                    </form>
+                                </li>
+                                <li>
+                                    <a class="link-modify-article" href="/">목록</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
 
-                  <div class="qna-comment">
-                      <div class="qna-comment-slipp">
-                          <p class="qna-comment-count"><strong>2</strong>개의 의견</p>
-                          <div class="qna-comment-slipp-articles">
+                    <!-- 댓글 입력 폼 (기능 미구현 상태) -->
+                    <div class="qna-comment">
+                        <div class="qna-comment-slipp">
+                            <p class="qna-comment-count"><strong>0</strong>개의 의견</p>
+                            <div class="qna-comment-slipp-articles">
+                                <!-- 댓글 리스트 들어올 자리 -->
+                            </div>
 
-                              <article class="article" id="answer-1405">
-                                  <div class="article-header">
-                                      <div class="article-header-thumb">
-                                          <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
-                                      </div>
-                                      <div class="article-header-text">
-                                          <a href="/users/1/자바지기" class="article-author-name">자바지기</a>
-                                          <a href="#answer-1434" class="article-header-time" title="퍼머링크">
-                                              2016-01-12 14:06
-                                          </a>
-                                      </div>
-                                  </div>
-                                  <div class="article-doc comment-doc">
-                                      <p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄 수도 있겠다.</p>
-                                  </div>
-                                  <div class="article-util">
-                                      <ul class="article-util-list">
-                                          <li>
-                                              <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
-                                          </li>
-                                          <li>
-                                              <form class="delete-answer-form" action="/questions/413/answers/1405" method="POST">
-                                                  <input type="hidden" name="_method" value="DELETE">
-                                                  <button type="submit" class="delete-answer-button">삭제</button>
-                                              </form>
-                                          </li>
-                                      </ul>
-                                  </div>
-                              </article>
-                              <article class="article" id="answer-1406">
-                                  <div class="article-header">
-                                      <div class="article-header-thumb">
-                                          <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
-                                      </div>
-                                      <div class="article-header-text">
-                                          <a href="/users/1/자바지기" class="article-author-name">자바지기</a>
-                                          <a href="#answer-1434" class="article-header-time" title="퍼머링크">
-                                              2016-01-12 14:06
-                                          </a>
-                                      </div>
-                                  </div>
-                                  <div class="article-doc comment-doc">
-                                      <p>이 글만으로는 원인 파악하기 힘들겠다. 소스 코드와 설정을 단순화해서 공유해 주면 같이 디버깅해줄 수도 있겠다.</p>
-                                  </div>
-                                  <div class="article-util">
-                                      <ul class="article-util-list">
-                                          <li>
-                                              <a class="link-modify-article" href="/questions/413/answers/1405/form">수정</a>
-                                          </li>
-                                          <li>
-                                              <form class="form-delete" action="/questions/413/answers/1405" method="POST">
-                                                  <input type="hidden" name="_method" value="DELETE">
-                                                  <button type="submit" class="delete-answer-button">삭제</button>
-                                              </form>
-                                          </li>
-                                      </ul>
-                                  </div>
-                              </article>
-                              <form class="submit-write">
-                                  <div class="form-group" style="padding:14px;">
-                                      <textarea class="form-control" placeholder="Update your status"></textarea>
-                                  </div>
-                                  <button class="btn btn-success pull-right" type="button">답변하기</button>
-                                  <div class="clearfix" />
-                              </form>
-                          </div>
-                      </div>
-                  </div>
-              </div>
+                            <form class="submit-write" action="#" method="POST">
+                                <div class="form-group" style="padding:14px;">
+                                    <textarea class="form-control" placeholder="댓글을 입력하세요..."></textarea>
+                                </div>
+                                <button class="btn btn-success pull-right" type="button">댓글 작성</button>
+                                <div class="clearfix"></div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-
-
-    <!-- 아래는 실제 게시글 객체(board)를 출력하는 부분 -->
-    <hr>
-    <div class="content-main">
-        <article class="article">
-            <header class="qna-header">
-                <h2 class="qna-title" th:text="${board.title}">게시글 제목</h2>
-            </header>
-
-            <div class="article-header">
-                <div class="article-header-thumb">
-                    <img src="https://graph.facebook.com/v2.3/100000059371774/picture"
-                         class="article-author-thumb" alt="profile" />
-                </div>
-                <div class="article-header-text">
-                    <span class="article-author-name" th:text="${board.writer}">작성자</span>
-                    <span class="article-header-time">방금 전</span> <!-- 시간 필드 없으면 그냥 텍스트로 -->
-                </div>
-            </div>
-
-            <div class="article-doc">
-                <p th:text="${board.content}">게시글 내용</p>
-            </div>
-        </article>
     </div>
 
     <script type="text/template" id="answerTemplate">
