--- a/src/main/resources/templates/article/view.html
+++ b/src/main/resources/templates/article/view.html
@@ -20,7 +20,7 @@
                 </div>
                 
                 <div class="d-flex justify-content-end gap-2">
-                    <a th:href="@{/articles/{id}/edit(id=${article.id})}" class="btn btn-warning">
+                    <a th:href="@{/articles/{id}/form(id=${article.id})}" class="btn btn-warning">
                         <i class="bi bi-pencil"></i> 수정
                     </a>
                     <form th:action="@{/articles/{id}(id=${article.id})}" method="post" style="display: inline;">
