--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -18,6 +18,10 @@
 
     <div class="container" id="main">
        <div class="col-md-10 col-md-offset-1">
+           <!-- userProfile -> 사용자 없으면 에러 보여주기-->
+           <div th:if="${errorMessage}" class="alert alert-warning">
+               <p th:text="${errorMessage}"></p>
+           </div>
           <div class="panel panel-default">
               <table class="table table-hover">
                   <thead>
