--- a/src/main/resources/templates/articles/show.html
+++ b/src/main/resources/templates/articles/show.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>게시글 상세</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script th:if="${errorMessage != null}" th:inline="javascript">
+        window.onload = function() {
+            alert(/*[[${errorMessage}]]*/ '');
+        }
+    </script>
     <style>
         .form-group {
             margin-bottom: 15px;
