--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -170,7 +170,8 @@ h3,h4,h5 {
     position:relative;
     padding:1em;
     padding-left:4em;
-    border-bottom:1px solid #eaeaea
+    border-bottom: 1px solid #eaeaea
+    margin-bottom: 10px;
 }
 .qna-list .list .main .subject{display:block;font-size:1.2em;line-height:1.4em;}
 .qna-list .list .main .subject a{display:block;color:#000}
