--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -26,7 +26,9 @@
 
         <!-- 강아지 이미지 추가 - 네비게이션 바 중앙에 배치 -->
         <div class="text-center" style="position: absolute; left: 50%; transform: translateX(-50%); top: 0;">
-            <img src="/images/angry_cloud.jpeg" alt="Cute Dog" style="height: 50px; width: auto; margin-top: 0; border-radius: 0;">
+            <a href="/">
+                <img src="/images/angry_cloud.jpeg" alt="Cute Dog" style="height: 50px; width: auto; margin-top: 0; border-radius: 0;">
+            </a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse1">
