--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -14,22 +14,31 @@
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
+            <!-- 오류 메시지 표시 영역 추가 -->
+            <div th:if="${errorMessage}" class="alert alert-danger" role="alert" th:text="${errorMessage}">
+                회원가입 중 오류가 발생했습니다.
+            </div>
+
             <form name="question" method="post" action="/users/signUp" th:action="@{/users/signUp}">
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
-                    <input class="form-control" id="userId" name="userId" placeholder="User ID">
+                    <input class="form-control" id="userId" name="userId" placeholder="User ID" th:value="${param.userId}">
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                    <!-- 비밀번호 요구사항 안내 추가 -->
+                    <small class="text-muted">
+                        비밀번호는 8~20자 사이이며, 대문자, 숫자, 특수문자를 각각 하나 이상 포함해야 합니다.
+                    </small>
                 </div>
                 <div class="form-group">
                     <label for="name">이름</label>
-                    <input class="form-control" id="name" name="name" placeholder="Name">
+                    <input class="form-control" id="name" name="name" placeholder="Name" th:value="${param.name}">
                 </div>
                 <div class="form-group">
                     <label for="email">이메일</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email" th:value="${param.email}">
                 </div>
                 <button type="submit" class="btn btn-success clearfix pull-right">회원가입</button>
                 <div class="clearfix" />
