[빙빙] step5-1 로그인 구현 (#24)
* docs : 4단계 설계
- 로그인 로직 설계

* feat : 로그인 페이지 작성

* feat : 로그인 기능 구현
- UserRepository::findByUserIdAndPassword 추가
- 아이디와 비밀번호가 일치하지 않으면 에러메세지 출력
- 세션에 유저 데이터 등록

* feat : 로그아웃 기능 구현
- 로그아웃 버튼 클릭시 세션 삭제
- 쿠키 JSESSIONID삭제
- 로그인시 버튼 목록변경

* refactor : 컨트롤러 로직 서비스로 이동
- 리터럴 상수로 변경

* feat : checkEqualTo 구현
- 비밀번호 일치여부를 반환하는 메소드 구현

* refactor : 의미없는 변수 제거 및 이름 변경

* refactor : 테스트 데이터 생성
- 회원가입시 중복아이디가 있는경우 에러를 반환하도록 수정

* feat : 테스트용 데이터 추가

* fix : 회원가입시 분기 처리 수정
- 중복회원이 없는 경우 에러를 날리던 방식을 isPresent를 사용하여 수정

* test : 회원가입시 중복 아이디 테스트
- 아이디가 중복되는 경우 예외 발생을 테스트한다.
- mockito 라이브러리 의존성 추가

* test : UserServiceTest 작성
- 회원가입 성공테스트
- 유저 리스트 조회 테스트
- 유저 정보 수정 테스트

* test : update시 save 호출 테스트 추가

* refactor : 오류메세지 상수 서비스로 이동
- 오류메세지 상수는 서비스에서 사용하고 컨트롤러에서는 에러 메세지를 받도록 수정

* chore : jpa.hibernate.ddl-auto update로 변경

* docs : readme.md 내용추가
- 트러블슈팅 추가
- 테스트 내용 추가

* fix : MvcConfig /login 템플릿 경로 수정
- 경로 앞에 "/" 제거

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,9 +4,17 @@
             <a href="/">Codestagram</a>
         </div>
         <div class="menu">
-            <a href="/login" class="btn">로그인</a>
-            <a href="/register" class="btn">회원가입</a>
-            <a href="/articles/form" class="btn write-btn">글쓰기</a>
+            <!-- 로그인하지 않은 경우 -->
+            <div th:if="${session.sessionedUser == null}">
+                <a href="/login" class="btn">로그인</a>
+                <a href="/register" class="btn">회원가입</a>
+            </div>
+            <!-- 로그인한 경우 -->
+            <div th:if="${session.sessionedUser != null}">
+                <a href="/users/sign-out" class="btn">로그아웃</a>
+                <a th:href="@{/users/{id}/update(id=${session.sessionedUser.id})}" class="btn">개인정보 수정</a>
+                <a href="/articles/form" class="btn write-btn">글쓰기</a>
+            </div>
         </div>
     </nav>
 </header>
