--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,17 +5,20 @@
 </head>
 <body>
 <header th:fragment="header">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg" style="background-color: #FFFFFF;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html">Codestagram</a>
+      <div class="d-flex ms-auto me-auto">
+        <a class="navbar-brand ms-3" href="/">Codestagram</a>
+      </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       </div>
-      <div class="d-flex justify-content-end">
+      <div class="d-flex">
         <a class="btn btn-primary" th:href="@{/users/login}">로그인</a>
         <a class="btn" th:href="@{/users/form}">회원가입</a>
+        <a class="btn" th:href="@{/article/write}">글 작성</a>
       </div>
     </div>
   </nav>
