fix : 회원 정보 수정시 본인 정보만 수정 - 수정 버튼 클릭시 세션 검사 - User.userId 작성 - list.html 알림 설정 - checkLogin -> static

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>사용자 목록</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script th:if="${errorMessage != null}" th:inline="javascript">
+        window.onload = function() {
+            alert(/*[[${errorMessage}]]*/ '');
+        }
+    </script>
 </head>
 <body>
 <div th:replace="~{header.html}"></div>
