--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="kr" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>SLiPP Java Web Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="../../static/css/styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-fixed-top header">
@@ -73,11 +73,22 @@
     </div>
 </div>
 
+<!--
+
+<div class="container">
+    <h2 th:text="${article.title}">제목</h2>
+    <p><strong>작성자:</strong> <span th:text="${article.writer}"></span></p>
+    <p><strong>내용:</strong></p>
+    <p th:text="${article.contents}"></p>
+    <a href="/index" class="btn btn-primary">목록으로</a>
+</div>
+-->
+
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-12">
         <div class="panel panel-default">
           <header class="qna-header">
-              <h2 class="qna-title">InitializingBean implements afterPropertiesSet() 호출되지 않는 문제.</h2>
+              <h2 class="qna-title" th:text="${article.title}">InitializingBean implements afterPropertiesSet() 호출되지 않는 문제.</h2>
           </header>
           <div class="content-main">
               <article class="article">
@@ -86,14 +97,14 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">kimmunsu</a>
+                          <a href="/users/92/kimmunsu" class="article-author-name" th:text="${article.writer}" >kimmunsu</a>
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
                               2015-12-30 01:47
                               <i class="icon-link"></i>
                           </a>
                       </div>
                   </div>
-                  <div class="article-doc">
+                  <div class="article-doc" th:text="${article.contents}" >
                       <p>A 에 의존성을 가지는 B라는 클래스가 있습니다.</p><p>B라는 클래스는 InitializingBean 을 상속하고 afterPropertiesSet을 구현하고 있습니다.
                       서버가 가동되면서 bean들이 초기화되는 시점에 B라는 클래스의 afterPropertiesSet 메소드는</p><p>A라는 클래스의 특정 메소드인 afunc()를 호출하고 있습니다.</p>
                   </div>
@@ -193,6 +204,9 @@
     </div>
 </div>
 
+
+
+
 <script type="text/template" id="answerTemplate">
 	<article class="article">
 		<div class="article-header">
@@ -224,8 +238,8 @@
 </script>
 
 <!-- script references -->
-<script src="../../static/js/jquery-2.2.0.min.js"></script>
-<script src="../../static/js/bootstrap.min.js"></script>
-<script src="../../static/js/scripts.js"></script>
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
 	</body>
 </html>
