--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -75,22 +75,22 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main"> <!--th 부분 있을 필요 없음 -->
-          <form name="question" method="post"  th:action="@{/users/create}" th:object="${user}">
+          <form name="question" method="post"  th:action="@{/users/create}" >
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
-                  <input class="form-control" id="userId" name="userId" th:field="*{userId}" required placeholder="User ID">
+                  <input class="form-control" id="userId" name="userId" required placeholder="User ID">
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
-                  <input type="password" class="form-control" id="password" th:field="*{password}" name="password" required placeholder="Password">
+                  <input type="password" class="form-control" id="password"  name="password" required placeholder="Password">
               </div>
               <div class="form-group">
                   <label for="name">이름</label>
-                  <input class="form-control" id="name" name="name" th:field="*{name}" placeholder="Name" required>
+                  <input class="form-control" id="name" name="name"  placeholder="Name" required>
               </div>
               <div class="form-group">
                   <label for="email">이메일</label>
-                  <input type="email" class="form-control" id="email" th:field="*{email}" name="email" placeholder="Email" required>
+                  <input type="email" class="form-control" id="email"  name="email" placeholder="Email" required>
               </div>
               <button type="submit" class="btn btn-success clearfix pull-right">회원가입</button>
               <div class="clearfix" />
