--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -74,8 +74,8 @@
 
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
-        <div class="panel panel-default content-main"> <!--th 부분 있을 필요 없음 -->
-            <form name="question" method="get"   th:action="@{/users/{userId}/form(userId=${user.userId})}" >
+        <div class="panel panel-default content-main"> <!-- <form name="question" method="get"   th:action="@{/users/{userId}/form(userId=${user.userId})}" > -->
+            <form name="question" method="post" th:object="${user}"   th:action="@{/users/{userId}/update(userId=${user.userId})}" >
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
                     <input class="form-control" type="userId"  id="userId" name="userId" th:value="${user.userId}" required placeholder="User ID">
