Login 어노테이션을 만들어서 Controller에서 반복적인 작업을 해야하는것을 제거, 이를 위해서 loginCheckArgumentResolver 생성 LoginInterceptor 에 ㄷ대한 테스트 코드 작성

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -142,7 +142,7 @@
             </div>
 
             <div class="menu-grid">
-                <a th:href="@{/qna/articles}" class="menu-item">
+                <a th:href="@{/qna}" class="menu-item">
                     <div class="menu-icon">
                         <i class="bi bi-question-circle"></i>
                     </div>
