[디노] step4-3 DB에 저장하기 (#27)
* Feat: Spring Data JPA 세팅

* Fix: 필요 없는 메서드 제거 및 잘못된 이름 수정

* Feat: User에 Entity 추가

* Feat: Article에 Entity 추가
Id는 자동으로 생성하고 User의 id를 fk로 가지도록 함.
Id는 자동으로 생성하므로 생성자에서 제외함

* Feat: Memory를 사용한 Repository 사용안하도록 애너테이션 제거

* Feat: 스프링 데이터 Jpa를 사용한 User와 Article Repository 인터페이스 생성

* Fix: 사용하지 않는 메서드 제거

* Refactor: 간단한 변경

* Test: Memory를 사용했던 Repository 테스트 수정
새롭게 만들 예정

* Fix: Warning이 떠서 mockito 추가

* Fix: 서버를 종료할 때 새롭게 테이블을 만들어서 수정

* Test: ArticleService 통합테스트 추가

* Refactor: Controller의 로직을 Form과 Service로 이동
Form에서 Article의 content를 직접 변환하고 생성하도록 했고, ArticleService에서 form을 받아 생성한 article을 저장하도록 함.

* Refactor: Optional을 service 객체에서 처리하도록 수정

* Refactor: UserForm에서 User객체를 생성하도록 함

* Refactor: UserService에서 Optional을 처리하도록 수정

* Fix: updateUser 메서드에 Transactional 어노테이션 추가
메서드서 user 객체만 업데이트 하고 데이터베이스에 영향이 안갔음.
어노테이션 추가해서 해결

* Refactor: Article의 멤버를 LocalDateTime으로 관리
출력할 때만 양식에 맞게 String으로 변환해서 전달

* Feat: 에러 메시지 출력 html 추가

* Feat: 모든 html에 해당 partial 추가

* Feat: html 수정

* Feat: 오류 메시지 model에 던지도록 수정

* Docs: README 수정

* Test: 통합테스트로 변경 및 기존 테스트 제거
jpa를 사용하며 기존 테스트를 사용할 수 없게 되어 테스트 변경 및 제거

* Feat: Article에 equals,hashcode 오버라이딩

* Fix: 오류 코드 변경

* Test: 테스트 제거

* Test: 테스트 수정

* Feat: 배포용으로 설정 변경
spring.datasource.url=jdbc:h2:file:./data/demo-db 로 변경

* Feat: 기존 코드 주석으로 처리하기

* Feat: gitignore에 h2 db 추가

* Refactor: 불필요한 클래스 및 테스트 제거

* Refactor: 업데이트 로직 User 안으로 변경 및 게터,세터 제거
필요없는 게터와 세터를 제거하고, 업데이트 로직을 User 클래스 안으로 옮겼다.

* Refactor: 기본 생성자 접근제어자 protected로 변경

* Refactor: 테스트 코드에서 UserForm 생성할 매개변수 생성자 이용하도록 함

* Refactor: toEntity로 메서드 명 변경

* Refactor: setter 제거 및 기본 생성자 접근제어자 변경

* Refactor: 기본 생성자 접근제어자 변경

* Refactor: 간단한 수정

* Docs: 배포 url 추가

* Docs: README 배포 설명 추가

--- a/src/main/resources/templates/user/update-form.html
+++ b/src/main/resources/templates/user/update-form.html
@@ -5,6 +5,7 @@
 {{> partials/nav}}
 {{> partials/subnav}}
 <div class="container" id="main">
+    {{> partials/alerts}}
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
           <form name="question" method="post" action="/users/{{userId}}/update">
@@ -29,7 +30,7 @@
                   <label for="email">이메일</label>
                   <input type="email" class="form-control" id="email" name="email" placeholder="{{user.email}}">
               </div>
-              <button type="submit" class="btn btn-success clearfix pull-right">회원가입</button>
+              <button type="submit" class="btn btn-success clearfix pull-right">회원 정보 수정</button>
               <div class="clearfix" />
           </form>
         </div>
