[Elbin] step 4-3 스프링 카페 - DB에 저장하기 (#30)
* feat: 게시글 조회 기능 구현

게시글 조회 API 개발

* feat: 게시글 상세 보기 기능 구현

게시글 상세 보기 API 개발

* feat: 회원정보 수정 기능 구현

회원정보 수정 API 개발

* Restore stashed changes

* Refactor: DB 연동 및 ORM 도입

H2 DB 연동, JPA 도입

* Build: 배포 완료

cloudtype 서비스로 배포 완료

--- a/src/main/resources/templates/article/index.html
+++ b/src/main/resources/templates/article/index.html
@@ -94,7 +94,9 @@
                   <div class="wrap">
                       <div class="main">
                           <strong class="subject">
-                              <a th:href="@{/articles/{index}(index=${article.index})}" th:text="${article.title}"></a>
+
+                              <a th:href="@{/articles/{id}(id=${article.id})}" th:text="${article.title}"></a>
+
                           </strong>
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
