refactor: userId 필드명 변경
- userId -> loginId 으로 필드명 변경했습니다.
- User 클래스 내에 id와 userId의 변수명이 혼동을 줄 수 있을 거 같아 변경했습니다.

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -21,7 +21,7 @@
                     <td>
                         <a th:href="@{/users/{id}(id=${user.id})}" th:text="${user.name}"></a>
                     </td>
-                    <td th:text="${user.userId}"></td>
+                    <td th:text="${user.loginId}"></td>
                     <td>
                         <a class="btn btn-success" th:href="@{/users/{id}/form(id=${user.id})}">수정</a>
                     </td>
