--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -19,7 +19,7 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1" th:text="${user.name}"></h5>
-                                    <p class="mb-2 pb-1" style="color: #2b2a2a;" th:text="${user.userId}"></p>
+                                    <p class="mb-2 pb-1" style="color: #2b2a2a;" th:text="${user.loginId}"></p>
                                     <div class="d-flex justify-content-start rounded-3 p-2 mb-2" style="background-color: #efefef;">
                                         <div>
                                             <p class="small text-muted mb-1">소개</p>
