--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -32,7 +32,7 @@
 
                             <div class="mb-4">
                                 <label for="userId" class="form-label fw-bold">아이디</label>
-                                <input type="text" class="form-control form-control-lg" id="userId" name="userId" th:value="${user.userId}" readonly>
+                                <input type="text" class="form-control form-control-lg" id="userId" name="userId" th:value="${user.loginId}" readonly>
                             </div>
 
                             <div class="mb-4">
