Feat: 로그아웃을 누르면 post 요청 보내도록 함

--- a/src/main/resources/templates/partials/subnav.html
+++ b/src/main/resources/templates/partials/subnav.html
@@ -19,7 +19,8 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="/">Posts</a></li>
                 {{#loginUser}}
-                <li><a href="#" role="button">로그아웃</a></li>
+                <form id="logoutForm" method="post" action="/user/logout" style="display: none;"></form>
+                <li><a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">로그아웃</a></li>
                 <li><a href="#" role="button">개인정보수정</a></li>
                 {{/loginUser}}
 
