Refactor: alert를 error로 이름변경

--- a/src/main/resources/templates/partials/error.html
+++ b/src/main/resources/templates/partials/error.html
@@ -1,5 +1,5 @@
-{{#alertMessage}}
+{{#errorMessage}}
     <div class="alert alert-danger" role="alert">
-        {{alertMessage}}
+        {{errorMessage}}
     </div>
-{{/alertMessage}}
+{{/errorMessage}}
