--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 {{> partials/nav}}
 {{> partials/subnav}}
 <div class="container" id="main">
-    {{> partials/alerts}}
+    {{> partials/error}}
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default qna-list">
           <ul class="list">
