--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -5,7 +5,7 @@
 {{> partials/nav}}
 {{> partials/subnav}}
 <div class="container" id="main">
-    {{> partials/alerts}}
+    {{> partials/error}}
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
           <form name="question" method="post" action="/user/create">
