--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -6,7 +6,7 @@
 {{> partials/subnav}}
 
 <div class="container" id="main">
-    {{> partials/alerts}}
+    {{> partials/error}}
    <div class="col-md-10 col-md-offset-1">
       <div class="panel panel-default">
           <table class="table table-hover">
