refactor: 글 상세페이지 URL 수정
- 글 번호를 나타내는 index -> id로 변경했습니다.

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -19,7 +19,7 @@
           <tr th:each="article, stat : ${articles}">
             <td th:text="${stat.count}"></td>
             <td>
-              <a th:text="${article.title}" th:href="@{/article/{index}(index=${article.id})}"></a>
+              <a th:text="${article.title}" th:href="@{/article/{id}(id=${article.id})}"></a>
             </td>
             <td th:text="${article.content}"></td>
           </tr>
