--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -20,8 +20,8 @@
             <div class="panel panel-default content-main">
                 <form name="question" method="post" action="/users/create">
                     <div class="form-group">
-                        <label for="userId">사용자 아이디</label>
-                        <input type="text" class="form-control" id="userId" name="userId" placeholder="User ID" required>
+                        <label for="loginId">사용자 아이디</label>
+                        <input type="text" class="form-control" id="loginId" name="loginId" placeholder="User ID" required>
                     </div>
                     <div class="form-group">
                         <label for="password">비밀번호</label>
