[빙빙] step 5-2 게시글 권한부여 (#35)
* docs : 5단계 기능 설계

* feat : 로그인하지 않은 사용자가 글쓰기 버튼을 누른 경우 로그인 페이지로 이동

* feat : 로그인하지 않은 사용자는 글 목록만 접근 가능
- 로그인 하지 않았다면 로그인 페이지로 이동

* feat : Article 연관관계 설정 및 작성일자 추가

* feat : 게시글 수정을 위한 템플릿 수정

* feat : Article 생성일자 로직 수정

* feat : 게시글 생성시 작성자, 생성일자 추가하도록 변경

* feat : 게시글 수정 기능 구현
- 수정 폼으로 이동 기능
- 로그인됐는지 확인 메소드

* style : 수정폼, 홈화면 디자인 수정

* feat : 게시글 삭제 기능 구현

* refactor : ArticleController 비즈니스 로직 ArticleService로 이동
- delete시 db에 데이터가 존재하는지 확인 후 삭제

* refactor : DB에 데이터 없을시 예외처리
- 예외발생시 에러메세지를 모델에 담아 템플릿으로 리턴

* feat : 에러 메세지 출력을 위한 템플릿 수정

* refactor : 테스트 메소드 접근 지정자 제거

* test : 게시글 작성시 에러 테스트
- 게시글을 작성할 때 회원이 존재 하지 않으면 에러가 발생

* test : 게시글 작성테스트

* test : 전체 게시글 조회 테스트

* test : 게시긇 수정 테스트

* test : 게시긇 삭제 테스트
- 삭제시 게시글이 존재하지 않는경우 테스트
- 삭제 후 DB에서 조회하는 경우 테스트

* fix : 회원 정보 수정시 본인 정보만 수정
- 수정 버튼 클릭시 세션 검사
- User.userId 작성
- list.html 알림 설정
- checkLogin -> static

* refactor : 에러 알림 헤더로 이동
- 파일마다 있던 alert을 헤더로 이동
- 디자인 수정

* refactor : 회원 인증 관련 컨트롤러 분리

* docs : README.md 추가

* fix : 게시글 수정시 작성자 본인 확인 하도록 수정
- author은 true인 경우 수정 폼이 보이도록 수정

* fix : AuthController @Controller없던 문제 수정

* refactor : 사용하지 않는 템플릿 삭제

* feat : Article 더미 데이터 생성
- @DependsOn으로 UserService가 실행된 후 ArticleService가 실행되도록 수정

* feat : 작성자가 아닌 경우 수정 삭제 불가
- 글 수정 페이지 접근시 작성자가 아닌 경우 AccessDeniedException발생
- 리다이렉트 하는 경우 에러 메세지 redirectAttributes에 담도록 수정

* feat : 게시글 상세보기 작성자 판단 메소드 구현
- 글 작성자인지에 따라 boolean값을 리턴하는 메소드 구현

* refactor : try-catch 범위 최소한으로 조절
- 에러를 던지는 부분만 try내에서 사용되도록 수정

* fix : showUserProfile user null 예외처리

* refactor : 일반 로직 예외 처리가 아닌 조건문으로 변경
- 로그인 아이디 비밀번호 틀린 경우 변경
- 사용자 정보 수정할때 id검사 변경

* docs : Readme.md 트러블슈팅 추가

* fix : 회원 가입시 아이디 중복 로직 문제 해결
- 아이디가 중복되지 않는 경우 에러 발생하던 문제 해결

* fix : initArticle 수정
- 테스트에서 목객체를 사용해서 에러가 발생하던 문제 해결

* fix : UserServiceTest 로직 수정
- 회원가입시 에러를 던지지 않고 boolean을 던지도록 수정

--- a/src/main/resources/templates/articles/form.html
+++ b/src/main/resources/templates/articles/form.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>글쓰기</title>
+    <title>게시글 작성</title>
     <link rel="stylesheet" href="/css/styles.css">
+
 </head>
 <body>
 <div th:replace="~{header.html}"></div>
@@ -19,13 +20,12 @@
             <label for="content">내용:</label>
             <textarea name="content" id="content" rows="10" required></textarea>
         </div>
+        <input type="hidden" name="userId" th:value="${session.sessionedUser.userId}">
         <button type="submit">게시하기</button>
     </form>
     <a href="/">홈으로</a>
 </main>
 
-
 <div th:replace="~{footer.html}"></div>
-
 </body>
 </html>
