Feat: show.html에서 수정 링크를 POST 폼에서 앵커 태그로 변경

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -31,10 +31,7 @@
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <form class="form-put" action="/articles/{{article.id}}" method="POST">
-                                  <input type="hidden" name="_method" value="PUT">
-                                  <button class="link-modify-article" type="submit">수정</button>
-                              </form>
+                              <a class="link-modify-article" href="/articles/{{article.id}}/update-form">수정</a>
                           </li>
                           <li>
                               <form class="form-delete" action="/articles/{{article.id}}" method="POST">
