feat : 로그인 구현 - 현재 상태가 로그인 상태이면 상단 메뉴에 "로그아웃","개인정보수정" 표시, 로그인 상태가 아니라면 "로그인","회원가입"이 표시

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -64,10 +64,10 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="../index.html">Posts</a></li>>
-                <li><a href="tml" role="button">로그인</a></li>
-                <li><a href="form.html" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li th:if="${session.user == null}"><a th:href="@{/auth/login}" role="button">로그인</a></li>
+                <li th:if="${session.user == null}"><a th:href="@{/users/form}" role="button">회원가입</a></li>
+                <li th:if="${session.user != null}"><a th:href="@{/auth/logout}" role="button">로그아웃</a></li>
+                <li th:if="${session.user != null}"><a th:href="@{/users/{userId}/form(userId=${session.user.userId})}" role="button">개인정보수정</a></li>
             </ul>
         </div>
     </div>
