--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -74,10 +74,10 @@
             <div class="collapse navbar-collapse" id="navbar-collapse2">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="/templates/index.html">Posts</a></li>
-                    <li><a href="/user/login" role="button">로그인</a></li>
-                   <li><a th:href="@{/users/form}"  role="button">회원가입</a></li>
-                    <li><a href="#" role="button">로그아웃</a></li>
-                   <li><a href="#" role="button">개인정보수정</a></li>
+                    <li th:if="${session.user == null}"><a th:href="@{/auth/login}" role="button">로그인</a></li>
+                   <li th:if="${session.user == null}"><a th:href="@{/users/form}"  role="button">회원가입</a></li>
+                    <li th:if="${session.user != null}"><a th:href="@{/auth/logout}" role="button">로그아웃</a></li>
+                   <li th:if="${session.user != null}"><a th:href="@{/users/{userId}/form(userId=${session.user.userId})}" role="button">개인정보수정</a></li>
                 </ul>
             </div>
        </div>
@@ -118,9 +118,9 @@
 
 <!-- script references -->
 
-<script src="../../static/js/jquery-2.2.0.min.js"></script>
-<script src="../../static/js/bootstrap.min.js"></script>
-<script src="../../static/js/scripts.js"></script>
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
 
 	</body>
 </html>
