feat : 자신이 쓴 댓글 삭제 기능 - 삭제여부를 판단하는 isDeleted 추가 - 댓글이 없거나 작성자가 아닌 경우 에러 발생 - 삭제 성공시 isDeleted를 true로 변경

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1361,3 +1361,21 @@ h1 {
     font-size: 0.8rem;
     color: #777;
 }
+.reply-actions {
+    margin-top: 5px;
+    text-align: right;
+}
+
+.reply-actions button {
+    margin-left: 5px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #dc3545; /* Bootstrap danger color */
+    color: white;
+    cursor: pointer;
+}
+
+.reply-actions button:hover {
+    background-color: #c82333;
+}
